--- a/src/styles/Button.module.css
+++ b/src/styles/Button.module.css
@@ -1,5 +1,5 @@
 .button {
-  @apply hover:scale-95 transition-all text-lg font-semibold py-3 px-7 rounded-full flex items-center justify-center gap-1 capitalize;
+  @apply hover:scale-95 transition-all sm:text-lg font-semibold py-3 px-7 rounded-full flex items-center justify-center gap-1 capitalize;
 }
 .primary {
   @apply bg-primary text-white hover:bg-primary-200;
