--- a/src/styles/TodoList.module.css
+++ b/src/styles/TodoList.module.css
@@ -1,3 +1,27 @@
-.emptyItem {
-  @apply max-w-[767px] mx-auto;
+.empty_item {
+  @apply max-w-[500px] mx-auto cursor-pointer;
+}
+.detail_content {
+  @apply grid gap-y-[10px];
+}
+.content_item {
+  @apply flex justify-between bg-white shadow-lg p-[27px] rounded-xl;
+}
+.content_item img {
+  @apply cursor-pointer;
+}
+.option {
+  @apply flex gap-4 items-center justify-center;
+}
+.option label {
+  @apply font-medium text-lg cursor-pointer;
+}
+.option input {
+  @apply w-5 h-5 text-red-600 bg-gray-100 border-gray-300 rounded-full focus:ring-blue-500 dark:focus:ring-blue-600 dark:ring-offset-gray-800 focus:ring-2 dark:bg-gray-700 dark:border-gray-600 cursor-pointer
+}
+.option input:checked {
+  @apply bg-green-950 border-red-500
+}
+.checked {
+  @apply line-through text-[#888888];
 }
